#26 removed unnecessary code [0.1h]